# TransformerPredictionModel

./: .env.example  .gitignore  .yamllint  README.md  data_pipeline.py  justfile  model.py  model_state.pt  preproc.joblib  pyproject.toml  train.py
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: pr-validation.yml
frontend/: index.html  launch.sh  player-api.js  script.js  styles.css
src/: main.py
src/api/: app.py
src/data_generation/: README.md  nba_pipeline_data.py
src/data_generation/tests/: test_nba_pipeline_data.py
src/mini_nn/: arnav_model_train.py  karthik_model.py  lalit_model.py  lalitnn  model.py  ryan_model.py
src/mini_nn/Arnav_mini_nn/: .gitignore  README.md  model.py  train.py
src/mini_nn/models/: Karthik_NN  best_model.pth  jon_best_model.pth  nidhi_mini_nn_trainer.py
src/mini_nn/nidhi_nn/: README.md  mini_nn_trainer.py
src/model_servicing/: decode.py
src/nba_dataset/: README.md  docker-compose.yml  download_data.sh  refresh_daily.sh
src/nba_dataset/ops_sql/: refresh_from_csv.sql
src/nba_dataset/sql/: 0000000002_create_nba_tables.sql.down  0000000002_create_nba_tables.sql.up  0000000003_load_nba_data.sql.down  0000000003_load_nba_data.sql.up  0000000004_add_player_stats_unique.sql.up
src/neural_network/: mini_nn.py  train_mini_nn.py
src/neural_network/tests/: test_mini_nn.py
src/omkar-nn/: nba_pipeline_nn.py
src/omkar-nn/data/: player_id_mapping.csv
src/practice_nn/: small_neural_network.ipynb
src/random_forest/: README.md  __init__.py  multi_player_predictor.py  predict_player.py  random_forest_trainer.py
src/random_forest/tests/: test_random_forest_trainer.py
src/server/: app.py  config.py  db_local.py  db_stub.py  model_loader.py  service.py
src/sportsbook_webscraper_pipeline/: Dockerfile  README.md  docker-compose.yml  down.sql  up.sql
src/sportsbook_webscraper_pipeline/airflow/dags/: migrate_to_postgres.py  nba_props_dag.py
src/sportsbook_webscraper_pipeline/airflow_pipeline/api_scripts/: fetch_bettingpros.py  fetch_draftedge.py  fetch_prizepicks.py
src/sportsbook_webscraper_pipeline/sql/: down.sql  up.sql
src/training_dataset/: build_training_dataset.py  player_age.py
src/training_player_data/: LeagueSchedule25_26.csv  fetch_player_data.py  mininet.py  train_one_player.py
src/transformerpredictionmodel/: __init__.py
src/utils/: db_safe.py  input_validation.py  shared_utils.py  team_name_map.py
tests/: __init__.py  test_main.py
training_data/: team_stats.csv
