[project]
name = "transformerpredictionmodel"
version = "0.1.0"
description = "Project to predict sports player performance outcomes using complex ML modeling"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nba-api>=1.10.2",
    "scikit-learn>=1.7.2",
    "requests>=2.32.3",
    "pandas>=2.2.0",
    "psycopg2-binary==2.9.9",
    "SQLAlchemy==1.4.52",
    "python-dotenv==1.0.1",
    "python-dateutil==2.8.2",
    "torch>=2.9.0",
    "urllib3>=2.6.0",
]

[tool.poe.tasks]
# Python linting and formatting
lint = "ruff check ."
fix = "ruff check --fix ."
format = "ruff format ."


# YAML linting
lint-yaml = "yamllint ."

# Markdown linting
lint-markdown = "markdownlint-cli2 '**/*.md'"

# Testing
test = "pytest"
test-cov = "pytest --cov=. --cov-report=term-missing"
coverage-report = "pytest --cov=. --cov-report=html"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src", "tests"]

[tool.uv]
dev-dependencies = [
    "yamlfix>=1.18.0",
]


[dependency-groups]
dev = [
    "poethepoet>=0.37.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.3",
    "yamllint>=1.37.1",
]
